BZERO and BSCALE used to determine type of input
According to the FITS standard, for images, BITPIX doesn't have any code
for `int8_t', `uint16_t', `uint32_t' and `uint64_t' types. So the FITS
standard allows for the `BZERO' and `BSCALE' keywords to be used to create
these types and CFITSIO does the proper conversion. But until now, we
hadn't taken these two keywords into account.

So for example, when `BITPIX=16' (FITS code for `int16'), `BZERO=32768' and
`BSCALE=1', the dataset is actually `uint16'. However, until this commit a
signed 16-bit image would be created to store the values. Hence, if the
image contained large values, we would get a CFITSIO numerical overflow
error (CFITSIO error code 412).

With this commit, the function that reads the image information (including
its numerical data type: `gal_fits_img_info') now also looks for `BZERO'
and `BSCALE' and if they are given and correspond to the standard type
conversions described above, the type of the image is corrected
appropriately. Since it involved reading keywords, to speed things up, it
also reads the name and units if given and so it takes two extra arguments.

In the process of playing with the `BZERO' and `BSCALE', Gnuastro can now
also write `uint64_t' datasets in FITS.

This issue was reported by David Valls-Gaboud.

Improvements:

  - Programs can write unsigned 64-bit integer FITS files.

Changes:

  - `gal_fits_img_info' now also returns the name and units of the dataset
    (if they aren't NULL). So it takes two extra arguments.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -19328,7 +19328,7 @@ filename and HDU as input instead of an already opened CFITSIO
 
 
 @deftypefun void gal_fits_key_list_add (gal_fits_list_key_t @code{**list}, uint8_t @code{type}, char @code{*keyname}, int @code{kfree}, void @code{*value}, int @code{vfree}, char @code{*comment}, int @code{cfree}, char @code{*unit})
-Add on keyword to the top of list of header keywords that need to be
+Add a keyword to the top of list of header keywords that need to be
 written into a FITS file. In the end, the keywords will have to be freed,
 so it is important to know before hand if they were allocated or not (hence
 the presence of the arguments ending in @code{free}). If the space for the
@@ -19394,10 +19394,13 @@ formats that is stored in FITS files. Only one image may be stored in each
 FITS HDU/extension. The functions described here can be used to get the
 information of, read, or write images in FITS files.
 
-@deftypefun void gal_fits_img_info (fitsfile @code{*fptr}, int @code{*type}, size_t @code{*ndim}, size_t @code{**dsize})
+@deftypefun void gal_fits_img_info (fitsfile @code{*fptr}, int @code{*type}, size_t @code{*ndim}, size_t @code{**dsize}, char @code{**name}, char @code{**unit})
 Read the type (see @ref{Library data types}), number of dimensions, and
-size of the array along each dimension of the CFITSIO @code{fitsfile} into
-the @code{type}, @code{ndim}, and @code{dsize} pointers respectively.
+size along each dimension of the CFITSIO @code{fitsfile} into the
+@code{type}, @code{ndim}, and @code{dsize} pointers respectively. If
+@code{name} and @code{unit} are not @code{NULL} (point to a @code{char *}),
+then if the image has a name and units, the respective string will be put
+in these pointers.
 @end deftypefun
 
 @deftypefun {gal_data_t *} gal_fits_img_read (char @code{*filename}, char @code{*hdu}, size_t @code{minmapsize})
